Remove dep on set version of jasmine-node

--- a/package.json
+++ b/package.json
@@ -17,6 +17,6 @@
   },
   "homepage": "http://mine-express.herokuapp.com/",
   "devDependencies": {
-    "jasmine-node": "^1.14.3"
+    "jasmine-node": "*"
   }
 }
